# Planeks-Test-Task

./: README.md  pyproject.toml
blog/: admin.py  models.py  signals.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_status.py  0003_auto_20191208_2209.py  0004_auto_20191209_1230.py
blog/static/blog/: main.css
blog/templates/blog/: about.html  base.html  home.html  post_create.html  post_detail.html
news_site/: celery.py  settings.py  urls.py
users/: exceptions.py  forms.py  mailgun.py  models.py  signals.py  tasks.py  validators.py  views.py
users/management/commands/: create_default_groups.py
users/migrations/: 0001_initial.py
users/templates/users/: activate_done.html  login.html  register.html
