[tool.poetry]
name = "planeks-test-task"
version = "0.1.0"
description = ""
authors = ["yshzz <yshzz2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
amqp = "=2.5.2"
asgiref = "=3.2.3"
billiard = "=3.6.1.0"
celery = "=4.3.0"
certifi = "=2019.11.28"
chardet = "=3.0.4"
decorator = "=4.4.1"
Django = "=3.0"
django-crispy-forms = "=1.8.1"
django-froala-editor = "=3.0.6"
django-username-email = "=2.2.4"
envparse = "=0.2.0"
idna = "=2.8"
importlib-metadata = "=1.3.0"
kombu = "=4.6.7"
more-itertools = "=8.0.2"
pytz = "=2019.3"
redis = "=3.3.11"
requests = "=2.22.0"
six = "=1.13.0"
sqlparse = "=0.3.0"
urllib3 = "=1.25.7"
validators = "=0.14.1"
vine = "=1.3.0"
zipp = "=0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
